<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/start_service_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Запустить сервис"
        android:onClick="openAlertDialog"/>

    <Button
        android:id="@+id/stop_service_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_service"
        android:layout_marginTop="16dp"
        android:onClick="openDatePickerDialog"/>

    <TextView
        android:id="@+id/date_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/custom_dialog_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_dialog"
        android:layout_marginTop="16dp"
        android:onClick="openTimePickerDialog"/>

    <TextView
        android:id="@+id/time_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/alert_dialog_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_alertdialog"
        android:onClick="openAlertDialog"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/datepicker_dialog_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_datepickerdialog"
        android:onClick="openDatePickerDialog"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/timepicker_dialog_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_timepickerdialog"
        android:onClick="openTimePickerDialog"
        android:layout_marginTop="16dp"/>
</LinearLayout>
